# plugin_manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  sender.py
plugin_manager/: plugin_manager.py
